[package]
name = "piston_play"
version = "0.1.0"
authors = ["George Shuklin <george.shuklin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
piston = "*"
piston_window = "*"
image = "0.23.0"
vecmath = "*"
rand = "*"
piston-timer_controller = "*"
num_cpus = "*"
